# TEMP-erature

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  flake.nix  justfile  platformio.ini
firmware/: README.MD
gui/: Widget.h
hal/: Display.h  Display.hpp  EPS32Helper.h  EPS32Helper.hpp  HAL.h  HAL.hpp  IDisplay.h  IInput.h  LilyGoDisplay.cpp  LilyGoDisplay.h  LilyGoDisplay.hpp  LilyGoInput.cpp  LilyGoInput.h  SDLDisplay.cpp  SDLDisplay.h  SDLDisplay.hpp  SDLHelper.h  SDLHelper.hpp  lv_conf.h
src/: main.cpp  wifi.h
